Adding GitHub Actions, Elk and K8s

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,6 +17,7 @@ jwt.secret=minhaChaveSuperSecreta32Chars!123456
 jwt.access-token-expiration-ms=86400000   
 jwt.refresh-token-expiration-ms=604800000 
 
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=never
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
 
