Configuring kubernetes and backend files

--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -1,17 +1,24 @@
-
 # Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 # Click nbfs://nbhost/SystemFileSystem/Templates/springboot/application.properties to edit this template
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+# 🛢️ Banco de Dados (H2 em memória - Testes Rápidos)
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1         
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# 📦 JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=create-drop                           
+spring.jpa.show-sql=false                                           
+spring.jpa.open-in-view=false                                      
 
-jwt.secret=testeSegredoJwt12345678901234567890
-jwt.expiration-ms=3600000
+# 🖥️ H2 Console (Opcional - Útil em desenvolvimento)
+spring.h2.console.enabled=true                                      
 
-spring.h2.console.enabled=true
+# 🔐 JWT - Testes
+jwt.secret=testeSegredoJwt12345678901234567890                     
+jwt.expiration-ms=3600000                                    
+
+# ✅ Observações
+# Esse profile é usado apenas nos testes de integração com banco H2.
+# Evita dependência de MySQL ou infraestrutura externa durante os testes.
