--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,45 +5,46 @@
 # 📛 Nome da aplicação
 spring.application.name=backend
 
-# 🛢️ Banco de Dados (MySQL)
+# 🛢️ Banco de Dados - MySQL (produção / desenvolvimento com Docker)
 spring.datasource.url=jdbc:mysql://mysql:3306/ecommerce?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 📦 JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true                        
+spring.jpa.open-in-view=false                   
 
-# 🔐 JWT
+# 🔐 JWT - Configuração de Tokens
 jwt.secret=minhaChaveSuperSecreta32Chars!123456
-jwt.access-token-expiration-ms=86400000
-jwt.refresh-token-expiration-ms=604800000
+jwt.access-token-expiration-ms=86400000         # 1 dia (em milissegundos)
+jwt.refresh-token-expiration-ms=604800000       # 7 dias (em milissegundos)
 
-# 🔍 Actuator (monitoramento)
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+# 🔍 Spring Boot Actuator - Monitoramento e Health Checks
+management.endpoints.web.exposure.include=*     
+management.endpoint.health.show-details=always  
+management.endpoint.prometheus.enabled=true     
 
-# 📨 Kafka - Configuração via variável de ambiente (caso exista), senão usa kafka:9092 como default
-spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+# 📨 Apache Kafka - Configuração de Conexão
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}  
 
 # ✅ Kafka Consumer
 spring.kafka.consumer.group-id=ecommerce-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.victormoni.ecommerce.kafka.dto
+spring.kafka.consumer.properties.session.timeout.ms=15000
+spring.kafka.consumer.properties.heartbeat.interval.ms=3000
 
 # ✅ Kafka Producer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-# ✅ Configs de tolerância e listener
+# ✅ Kafka Listener (Tolerância a Falhas)
 spring.kafka.listener.missing-topics-fatal=false
-spring.kafka.consumer.properties.session.timeout.ms=15000
-spring.kafka.consumer.properties.heartbeat.interval.ms=3000
 spring.kafka.listener.concurrency=1
 spring.kafka.listener.ack-mode=record
 
-# 📋 Logging
+# 📋 Logging - Padrão de saída dos logs no console
 logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
