--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -48,3 +48,17 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 10
             failureThreshold: 10
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend
+  namespace: loja-virtual
+spec:
+  selector:
+    app: backend
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+  type: ClusterIP
