--- a/k8s/elasticsearch.yaml
+++ b/k8s/elasticsearch.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: elasticsearch
-          image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
+          image: docker.elastic.co/elasticsearch/elasticsearch:9.0.2
           ports:
             - containerPort: 9200
           env:
@@ -42,3 +42,16 @@ spec:
         resources:
           requests:
             storage: 1Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: elasticsearch
+  namespace: loja-virtual
+spec:
+  selector:
+    app: elasticsearch
+  ports:
+    - port: 9200
+      targetPort: 9200
+  type: ClusterIP
