--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -37,3 +37,16 @@ spec:
               port: 80
             failureThreshold: 20
             periodSeconds: 5
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend
+  namespace: loja-virtual
+spec:
+  selector:
+    app: frontend
+  ports:
+    - port: 80
+      targetPort: 80
+  type: ClusterIP
