--- a/k8s/kibana.yaml
+++ b/k8s/kibana.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: kibana
-          image: docker.elastic.co/kibana/kibana:8.7.1
+          image: docker.elastic.co/kibana/kibana:9.0.2
           ports:
             - containerPort: 5601
           env:
@@ -42,3 +42,16 @@ spec:
             initialDelaySeconds: 60
             periodSeconds: 20
             failureThreshold: 3
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kibana
+  namespace: loja-virtual
+spec:
+  selector:
+    app: kibana
+  ports:
+    - port: 5601
+      targetPort: 5601
+  type: ClusterIP
