--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    image: victormoni/shopeasy-backend:latest
     container_name: backend
     depends_on:
       mysql:
@@ -53,6 +54,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    image: victormoni/shopeasy-frontend:latest
     container_name: frontend
     ports:
       - "80:80"
