--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "^20.1.4",
     "@angular/core": "^20.1.4",
     "@angular/forms": "^20.1.4",
+    "@angular/material": "^20.1.4",
     "@angular/platform-browser": "^20.1.4",
     "@angular/platform-browser-dynamic": "^20.1.4",
     "@angular/router": "^20.1.4",
